--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -6,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.codepath.apps.codepathtweets"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 24
     }
 
@@ -16,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    dataBinding.enabled = true
 }
 
 repositories {
@@ -28,11 +31,23 @@ dependencies {
     compile('com.codepath.libraries:android-oauth-handler:1.0.0@aar') {
         transitive = true
     }
-    compile 'com.android.support:appcompat-v7:24.0.0'
     // Picasso for remote image loading
-    compile 'com.squareup.picasso:picasso:2.5.2'
     // Android Async Http for sending async network requests
-    compile 'com.loopj.android:android-async-http:1.4.9'
     // ActiveAndroid for simple persistence with an ORM
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile 'org.parceler:parceler-api:1.1.1'
+    apt 'org.parceler:parceler:1.1.1'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.github.danylovolokh:video-player-manager:0.2.0'
+    compile 'com.sprylab.android.texturevideoview:texturevideoview:1.1.1'
+    compile 'com.malmstein:fenster:0.0.2'
+    compile 'net.danlew:android.joda:2.9.4.1'
 }
