--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,22 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true" >
         <meta-data
             android:name="AA_DB_NAME"
             android:value="RestClient.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="com.codepath.apps.simplecptweets.models.Tweet, com.codepath.apps.simplecptweets.models.User" />
+
+        <provider
+            android:name="com.activeandroid.content.ContentProvider"
+            android:authorities="com.codepath.apps.simplecptweets"
+            android:exported="false" />
 
         <activity
             android:name="com.codepath.apps.codepathtweets.LoginActivity"
