--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,20 +34,22 @@ dependencies {
     // Picasso for remote image loading
     // Android Async Http for sending async network requests
     // ActiveAndroid for simple persistence with an ORM
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    apt 'org.parceler:parceler:1.1.1'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:design:24.1.1'
     compile 'com.jakewharton:butterknife:8.2.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'org.parceler:parceler-api:1.1.1'
-    apt 'org.parceler:parceler:1.1.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.github.danylovolokh:video-player-manager:0.2.0'
     compile 'com.sprylab.android.texturevideoview:texturevideoview:1.1.1'
     compile 'com.malmstein:fenster:0.0.2'
     compile 'net.danlew:android.joda:2.9.4.1'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
