--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.SearchActivity"></activity>
+        <activity android:name=".activities.DetailActivity"></activity>
     </application>
 
 </manifest>
