--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.codepath.apps.codepathtweets"
     android:versionCode="1"
     android:versionName="1.0">
@@ -9,11 +10,13 @@
 
     <application
         android:name=".TwitterApplication"
+        android:debuggable="true"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="HardcodedDebugMode">
         <meta-data
             android:name="AA_DB_NAME"
             android:value="RestClient.db" />
